fix: custom sccs aligned with new early-supporter page version

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -83,6 +83,10 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+.bg-gray {
+  background: #1c1c1cab;
+}
+
 $gray-900: #141515;
 .img-icon {
   width: 2rem !important;
@@ -621,7 +625,7 @@ section.full-height {
   }
   .swiper-button-next:after,
   .swiper-button-prev:after {
-    font-size: 2rem !important;
+    font-size: 1.5rem !important;
   }
   .swiper-pagination-progressbar {
     height: 1px !important;
@@ -1240,11 +1244,27 @@ div.early-supporter {
   }
   h4 {
     font-family: "Nuckle";
-    font-size: calc(1.2686rem + 0.2232vw) !important;
+
+    font-size: calc(1rem + 0.2232vw) !important;
     cursor: default;
   }
   h4.benefits {
     padding-top: 0.8rem;
     padding-left: 1rem;
+    font-size: calc(1rem + 0.2232vw) !important;
   }
+  button.btn-mint {
+    background-color: white;
+    color: black;
+
+    font-size: calc(1rem + 0.2232vw) !important;
+    border-radius: 2.5rem;
+    padding: 0.3rem 1.2rem;
+  }
+}
+
+a.nft-label {
+  color: black;
+  -webkit-text-stroke: 1px white;
+  text-stroke: 1px white;
 }
